# rust_utilities

./: .editorconfig  .gitignore  Cargo.toml  Cross.toml  README.md
.claude/skills/affine-cli/: SKILL.md
affine-cli/: CHANGELOG.md  Cargo.toml  README.md
affine-cli/scripts/: yjs_bundle.js
affine-cli/src/: client.rs  config.rs  main.rs  queries.rs  sync.rs  tags.rs  yjs_engine.rs
api-reader/: Cargo.toml
api-reader/src/: main.rs
api_reader/: Cargo.toml
api_reader/src/: main.rs
avahi-scan/: Cargo.toml  README.md
avahi-scan/src/: main.rs
colcat/: Cargo.toml
colcat/src/: main.rs
src/: colcat.rs
tests/: integration_test.rs
tests/common/: mod.rs
