[workspace]
members = [
    "api_reader",
    "avahi-scan",
    "colcat",
]
resolver = "2"

[workspace.package]
name = "rust_utilities"
version = "0.1.0"
authors = ["Richard Osterloh <richard.osterloh@gmail.com>"]
license = "MIT"
description = "Small utililies I've written while learning Rust"
homepage = "https://github.com/rosterloh/rust_utilities"
repository = "https://github.com/rosterloh/rust_utilities"
readme = "README.md"
keywords = ["cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
rust-version = "1.86.0"
edition = "2024"

[profile.release]
opt-level = 3
debug = false
panic="unwind"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
panic="abort"