[package]
name = "api_reader"
version = "0.1.0"
authors = ["Richard Osterloh <richard.osterloh@gmail.com>"]
license = "MIT"
description = "Application to read json data from an api"

homepage = "https://github.com/rosterloh/rust_utilities"
repository = "https://github.com/rosterloh/rust_utilities"
readme = "README.md"
keywords = ["cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
rust-version = "1.82.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.9", features = ["json"]}
tokio = {version = "1.41.1", features = ["full"]}
serde_json = "1.0.132"
csv = "1.3.1"
dotenv = "0.15.0"