[package]
name = "api_reader"
version = "0.1.0"
authors = ["Richard Osterloh <richard.osterloh@gmail.com>"]
description = "Application to read json data from an api"
keywords = ["cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
reqwest = {version = "0.12", features = ["json"]}
tokio = {version = "1.44", features = ["full"]}
serde_json = "1.0"
csv = "1.3.1"
dotenv = "0.15.0"