[package]
name = "avahi-scan"
version = "0.1.0"
authors = ["Richard Osterloh <richard.osterloh@gmail.com>"]
description = "Small application to scan for Avahi services on the local network"
keywords = ["cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "avahi-scan"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
env_logger = "0.11"
log = "0.4"
zeroconf = "0.15"