[package]
name = "colcat"
version = "0.1.0"
authors = ["Richard Osterloh <richard.osterloh@gmail.com>"]
description = "Small application to list and print values from collectd sockets"
keywords = ["cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
edition.workspace = true

[[bin]]
name = "colcat"
path = "src/main.rs"
